<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="71R-Qr-pzV">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Your Meals-->
        <scene sceneID="gnd-NB-kpP">
            <objects>
                <tableViewController id="j8R-ft-eSe" customClass="MealTableViewController" customModule="FoodTracker" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="fUt-ck-35H">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MealTableViewCell" rowHeight="90" id="b21-um-qOZ" customClass="MealTableViewCell" customModule="FoodTracker" customModuleProvider="target">
                                <rect key="frame" x="0.0" y="28" width="375" height="90"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="b21-um-qOZ" id="F8s-Tp-fHx">
                                    <rect key="frame" x="0.0" y="0.0" width="375" height="89.5"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="defaultPhoto" translatesAutoresizingMaskIntoConstraints="NO" id="lqf-w7-Rhq">
                                            <rect key="frame" x="0.0" y="2" width="85" height="85"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        </imageView>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Khm-gv-n7F">
                                            <rect key="frame" x="93" y="11" width="266" height="21"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <nil key="textColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <stackView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="wJN-a4-c5B" customClass="RatingControl" customModule="FoodTracker" customModuleProvider="target">
                                            <rect key="frame" x="93" y="40" width="252" height="44"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        </stackView>
                                    </subviews>
                                </tableViewCellContentView>
                                <connections>
                                    <outlet property="nameLabel" destination="Khm-gv-n7F" id="hJ0-0K-Oir"/>
                                    <outlet property="photoImageView" destination="lqf-w7-Rhq" id="CZu-SL-SAW"/>
                                    <outlet property="ratingControl" destination="wJN-a4-c5B" id="wRc-SP-V0G"/>
                                    <segue destination="BYZ-38-t0r" kind="show" identifier="ShowDetail" id="p2F-rC-eeH"/>
                                </connections>
                            </tableViewCell>
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="j8R-ft-eSe" id="s2K-7W-PJh"/>
                            <outlet property="delegate" destination="j8R-ft-eSe" id="ViZ-v8-uaM"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Your Meals" id="lwC-ie-aqu">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="MwY-Ob-aHX">
                            <connections>
                                <segue destination="oVR-9n-YHz" kind="presentation" identifier="AddItem" id="wqU-Ha-QU5"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="xj8-BN-6eV" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-1236" y="-558.17091454272872"/>
        </scene>
        <!--New Meal-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="MealViewController" customModule="FoodTracker" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="8tR-8Z-yYw">
                                <rect key="frame" x="0.0" y="84" width="375" height="410"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter meal name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dYz-HR-pkw">
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="30"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                                    </textField>
                                    <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="320" placeholderIntrinsicHeight="320" image="defaultPhoto" translatesAutoresizingMaskIntoConstraints="NO" id="lyq-Kb-cW7">
                                        <rect key="frame" x="27.5" y="38" width="320" height="320"/>
                                        <gestureRecognizers/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="lyq-Kb-cW7" secondAttribute="height" multiplier="1:1" id="uCS-W2-Uqg"/>
                                        </constraints>
                                        <connections>
                                            <outletCollection property="gestureRecognizers" destination="FQE-o8-5yv" appends="YES" id="97i-hW-ktQ"/>
                                        </connections>
                                    </imageView>
                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="uGp-pP-R14" customClass="RatingControl" customModule="FoodTracker" customModuleProvider="target">
                                        <rect key="frame" x="61.5" y="366" width="252" height="44"/>
                                    </stackView>
                                </subviews>
                                <constraints>
                                    <constraint firstAttribute="trailing" secondItem="dYz-HR-pkw" secondAttribute="trailing" id="ccg-Xf-8YJ"/>
                                </constraints>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="8tR-8Z-yYw" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="7dS-mx-QCk"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="8tR-8Z-yYw" secondAttribute="trailing" id="KPs-Bh-36E"/>
                            <constraint firstItem="8tR-8Z-yYw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="xC2-hb-cyY"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="New Meal" id="STS-7P-kvm">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="RHZ-GR-wDM">
                            <connections>
                                <action selector="cancel:" destination="BYZ-38-t0r" id="pTK-XM-fqU"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="9Gg-tj-AFG">
                            <connections>
                                <segue destination="fSt-BK-cY3" kind="unwind" unwindAction="unwindToMealListWithSender:" id="8iZ-o5-4Or"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <outlet property="nameTextField" destination="dYz-HR-pkw" id="DDT-c8-w6J"/>
                        <outlet property="photoImageView" destination="lyq-Kb-cW7" id="zTc-gM-HuX"/>
                        <outlet property="ratingControl" destination="uGp-pP-R14" id="P3D-hl-a6a"/>
                        <outlet property="saveButton" destination="9Gg-tj-AFG" id="djI-Oo-p0Q"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                <exit id="fSt-BK-cY3" userLabel="Exit" sceneMemberID="exit"/>
                <tapGestureRecognizer id="FQE-o8-5yv">
                    <connections>
                        <action selector="selectImageFromPhotoLibrary:" destination="BYZ-38-t0r" id="2He-zR-P8Q"/>
                    </connections>
                </tapGestureRecognizer>
            </objects>
            <point key="canvasLocation" x="436" y="-558.17091454272872"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="yzh-N2-jEm">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="71R-Qr-pzV" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="4hN-yV-Oap">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="j8R-ft-eSe" kind="relationship" relationship="rootViewController" id="MfA-nC-h0Q"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="SCb-Ml-eyx" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-2175.1999999999998" y="-558.17091454272872"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="JlJ-Qu-ymk">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="oVR-9n-YHz" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="MvG-uv-GIB">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="6oQ-ir-Feg"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="17q-8e-nWU" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-410" y="-193"/>
        </scene>
    </scenes>
    <resources>
        <image name="defaultPhoto" width="540" height="540"/>
    </resources>
    <inferredMetricsTieBreakers>
        <segue reference="p2F-rC-eeH"/>
    </inferredMetricsTieBreakers>
</document>
